Fix wrapping it titles.

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 @media screen {
 body {
-   max-width: 1000px;
+   max-width: 700px;
    margin: 0px auto;
    /* padding: 18px; */
    background: whitesmoke;
@@ -115,6 +115,7 @@ article header h1 {
     font-size: 2em;
     margin-top: 25px;
     margin-bottom: 25px;
+    line-height: 50px;
 }
 
 article p {
